# wmdecompose

./: .gitignore  FinetuneYelp.py  IMDB_example.ipynb  PrepData.py  Prototyping.ipynb  README.md  SearchK.py  WMDModels.py  baseball.csv  econ.csv  finetune_yelp.py  nfl.csv  reddit_example.ipynb  requirements.txt  setup.cfg  worldnews_any.csv
data/: nba.csv  news_any.csv  news_long.csv  soc.csv  worldnews_all.csv
experiments/: yelp_neg_to_pos_clusters_w2v_gs.csv  yelp_neg_to_pos_clusters_w2v_gs.pkl  yelp_neg_to_pos_diff_w2v_gs.pkl  yelp_pos_to_neg_clusters_w2v_gs.csv  yelp_pos_to_neg_clusters_w2v_gs.pkl  yelp_pos_to_neg_diff_w2v_gs.pkl  yelp_x1_to_x2_w2v_gs.csv  yelp_x2_to_x1_w2v_gs.csv
flow_wmd/: documents.py  gale_shapeley.py  models.py  modules.py  modules_rwmd.py  utils.py
notebooks/: IMDB_example.ipynb  Prototyping.ipynb  Yelp_example.ipynb  finetune_w2v.ipynb  finetune_w2v_IMDB.ipynb  finetune_w2v_Yelp.ipynb  scopus_example.ipynb
paper/: FinetuneYelp.py  PrepData.py  README.md  SearchK.py  WMDModels.py
paper/data/: yelp_sample.pkl
paper/notebooks/: IMDB_example.ipynb  Yelp_example.ipynb  finetune_w2v_IMDB.ipynb  finetune_w2v_Yelp.ipynb  reddit_example.ipynb  reddit_example_final_cosine.ipynb  reddit_example_paper.ipynb  scopus_example.ipynb
src/: gale_shapeley.py  models.py  utils.py
src/wmdecompose/: documents.py  gale_shapeley.py  models.py  utils.py
src/wmdecompose.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
wmdecompose/: documents.py  gale_shapeley.py  utils.py
