[metadata]
name = wmdecompose
version = 0.0.1
author = Mikael Brunila
author_email = mikael.brunila@gmail.com
description = Interpretable Word Mover's Distance for cultural research.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maybemkl/wmdecompose
project_urls =
    Bug Tracker = https://github.com/maybemkl/wmdecompose/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
